--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -176,3 +176,420 @@ body{
     font-weight: 600;
 }
 
+.main-service{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    max-width: 1140px;
+    margin: 40px auto 0 auto;
+    padding: 40px 20px;
+}
+
+.left-service, .right-service{
+    padding: 20px;
+}
+
+.left-service {
+    flex: 0 0 60%;
+    border-right: 1px solid #ccc;
+}
+
+.right-service {
+    flex: 0 0 40%;
+}
+
+.left-service h2 {
+    font-size: 2rem;
+    margin-bottom: 5px;
+}
+
+.left-top-info {
+    font-size: 0.8rem;
+    line-height: 1.6;
+    margin-bottom: 25px;
+    color: #aeadad;
+    border-bottom: 1px solid #c0c0c0;
+}
+
+.service{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 10px 0;
+    border-bottom: 1px solid #eee;
+    padding-bottom: 8px;
+    border-bottom: 1px solid #c0c0c0;
+}
+
+.service-name {
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    gap: 6px;
+}
+.service-price {
+    color: #5c0dbd;
+    margin-left: 5px;
+}
+.btn {
+    padding: 4px 8px;
+    border: none;
+    cursor: pointer;
+    font-size: 0.85rem;
+    /* border-radius: 4px; */
+    display: flex;
+    align-items: center;
+    gap: 4px;
+}
+.add-btn {
+    background: transparent;
+    color: #333;
+    /* border: 1px solid #0073e6; */
+}
+.remove-btn {
+    background: transparent;
+    color: #d6004c;
+    /* border: 1px solid #d6004c; */
+}
+.cart-item {
+    display: flex;
+    justify-content: space-between;
+    padding: 5px 0;
+    border-bottom: 1px solid #eee;
+}
+
+.total {
+    font-weight: bold;
+    margin-top: 10px;
+}
+input {
+    width: 100%;
+    padding: 8px;
+    margin: 8px 0;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+}
+.book-btn {
+    width: 100%;
+    padding: 20px;
+    background: #0073e6;
+    color: #fff;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+    font-size: 1rem;
+    font-weight: bold;
+}
+
+.book-btn:hover,
+.book-btn:active {
+    background-color: #002292;
+}
+
+.confirmation {
+    margin-top: 10px;
+    font-size: 0.7rem;
+    color: green;
+    font-weight: bold;
+}
+
+.info {
+    font-size: 0.8rem;
+    color: #5938ff;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
+#services {
+    margin: 40px 0;
+}
+
+.icon {
+    font-size: 1.1rem;
+}
+.book-heading {
+    margin-top: 20px;
+    margin-bottom: 10px;
+    font-size: 0.95rem;
+}
+
+.label-text{
+    font-weight: bold;
+    margin-bottom: 5px;
+    margin-top: 10px;
+    display: block;
+    font-size: 0.7rem;
+}
+
+.add-item{
+    font-size: 1.2rem;
+    font-weight: bold;
+    margin-bottom: 10px;
+    color: #333;
+    text-align: center;
+}
+
+.sub-input-row {
+    display: flex;
+    gap: 16px; /* space between inputs */
+}
+
+.sub-input-group {
+    /* flex: 1; */
+    display: flex;
+    flex-direction: column;
+}
+
+.sub-input{
+    width: 100%;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+    font-size: 0.9rem;
+    margin-bottom: 20px; /* space between inputs */
+}
+
+input::placeholder {
+    font-size: 0.7rem;  /* smaller than normal text */
+    color: #bfbfbf;        /* optional: lighter color */
+}
+
+.quality-all{
+    display: flex;
+    /* align-items: center; */
+    /* justify-content: center; */
+    /* flex-direction: column; */
+    margin: 40px 40px;
+    gap: 10px;
+}
+
+.quality-item{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    padding: 10px;
+}
+
+.icon-big{
+    font-size: 2.5rem;
+    margin-bottom: 10px;
+}
+
+.quality-item h3{
+    font-size: 1.2rem;
+    margin-bottom: 15px;
+}
+
+.quality-item p{
+    width: 70%;
+    font-size: 0.8rem;
+    color: #a7a7a7;
+}
+
+.subscribe-row{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 60px 0;
+    padding: 40px 0;
+    background-color: #24a4ff;
+}
+
+.sub-left{
+    flex: 0 0 20%;
+    /* padding: 20px; */
+    align-items: left;
+    justify-content: left;
+    color: #ffffff;
+}
+
+.sub-right{
+    display: flex;
+    /* align-items: center; */
+    /* justify-content: center; */
+    flex-direction: column;
+    gap: 20px;
+}
+
+.sub-inputs {
+    display: flex;
+    gap: 20px; /* Space between inputs */
+}
+
+.sub-inputs input{
+    width: 200px;
+    padding: 10px;
+    border-radius: 4px;
+    border: solid 1px #ccc;
+    font-size: 0.9rem;
+    color: #ffffff;
+    background-color: #dbdbdb2a;
+}
+
+.sub-right button{
+    width: 200px;
+    padding: 20px 20px;
+    background-color: #ffffff;
+    color: #24a4ff;
+    border: none;
+    border-radius: 4px;
+    font-size: 0.9rem;
+    cursor: pointer;
+}
+
+.sub-right button:hover,
+.sub-right button:active{
+    background-color: #0842ff;
+    color: #ffffff;
+}
+
+.row-footer{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    align-items: flex-start;
+    /* flex-wrap: wrap; */
+    max-width: 1140px;
+    margin: 0 auto;
+    padding: 40px 20px;
+}
+
+.footer_sec_1{
+    display: flex;
+    /* align-items: center; */
+    /* justify-content: center; */
+    flex-direction: column;
+    width: 22%;
+    padding: 20px 0;
+}
+
+.footer-logo{
+    font-family: Segoe UI, sans-serif;
+    font-size: xx-large;
+    font-weight: bold;
+    text-align: start;
+    margin-bottom: 20px;
+}
+
+.footer_sec_1 h3{
+    font-size: 0.9rem;
+    margin-bottom: 10px;
+}
+
+.footer_sec_1 p{
+    font-size: 0.8rem;
+    color: #a7a7a7;
+    margin-bottom: 10px;
+}
+
+.footer_sec_2{
+    display: flex;
+    align-items: left;
+    justify-content: left;
+    flex-direction: column;
+    width: 20%;
+    padding: 20px 0;
+}
+
+.footer_sec_2 h3{
+    font-size: 0.9rem;
+    margin-bottom: 10px;
+}
+
+.footer_sec_2 a{
+    font-size: 0.8rem;
+    color: #a7a7a7;
+    margin-bottom: 10px;
+    list-style: none;
+}
+
+.footer_sec_2 a:hover,
+.footer_sec_2 a:active{
+    color: #0842ff;
+}
+
+.footer_sec_2 a:link,
+.footer_sec_2 a:visited{
+    text-decoration: none;
+}
+
+.footer_sec_2 li{
+    list-style: none;
+}
+
+.footer_sec_3{
+    display: flex;
+    /* align-items: left;
+    justify-content: left; */
+    flex-direction: column;
+    width: 20%;
+    padding: 20px 0;
+    margin-top: 0px;
+}
+
+.footer_sec_3 h3{
+    font-size: 0.9rem;
+    margin-bottom: 10px;
+}
+
+.footer_sec_3 p{
+    font-size: 0.8rem;
+    color: #a7a7a7;
+    margin-bottom: 10px;
+    list-style: none;
+}
+
+.footer_sec_4{
+    display: flex;
+    /* align-items: center; */
+    justify-content: left;
+    flex-direction: column;
+    width: 20%;
+    padding: 20px 0;
+    gap: 20px;
+}
+
+.footer_sec_4 h3{
+    font-size: 0.9rem;
+    /* margin-bottom: 10px; */
+}
+
+.social-links{
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    /* float: right; */
+}
+
+.social-links li{
+    display: inline-block;
+    margin-right: 20px;
+    margin-bottom: 10px;
+}
+
+.fb:hover{
+    color: #3b5998;
+}
+
+.twitter:hover{
+    color: #1da1f2;
+}
+
+.insta:hover{
+    color: #e1306c;
+}
+
+.youtube:hover{
+    color: #b50000;
+}
+
+.row-copyright{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    padding: 20px 0;
+    background-color: #f1f1f1;
+}
